--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -53,8 +53,11 @@ img{
 }
 
 .logo__nombre{
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
   color: white;
 }
+
 @media (min-width: 480px) {
   .barra{
     display: flex;
@@ -62,7 +65,23 @@ img{
     margin: 0 1rem ;
   } 
 }
-
+.navegacion{
+  margin-top: 5px;
+}
 .navegacion__enlace{
+  display: flex;
+  justify-content: center;
   color: #ffffff;
+  font-size: 1.5rem;
+  margin: 2rem;
+}
+@media (min-width: 480px) {
+  .navegacion__enlace{
+    color: #ffffff;
+    font-size: 1.5rem;
+    margin: 2rem;
+    display: initial;
+    text-align: center;
+    align-items: center;
+  }    
 }
