--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -53,7 +53,7 @@ img{
 }
 
 .logo__nombre{
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   margin-bottom: 1rem;
   color: white;
 }
@@ -71,13 +71,13 @@ img{
 .navegacion__enlace{
   display: flex;
   justify-content: center;
-  color: #ffffff;
+  color: yellow;
   font-size: 1.5rem;
   margin: 2rem;
 }
 @media (min-width: 480px) {
   .navegacion__enlace{
-    color: #ffffff;
+    color: yellow;
     font-size: 1.8rem;
     margin: 2rem;
     display: initial;
