--- a/vite-project/src/Component/NavBar/navBar.css
+++ b/vite-project/src/Component/NavBar/navBar.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(245, 174, 44, 0.5);
 }
 .nav-img{
-    width: 7%;
+    width: 7rem;
     margin-bottom: -4px;
 }
 .nav-cont-link a{
@@ -14,5 +14,5 @@
     margin-left: 2rem;
 }
 .nav-cont-search input{
-    width: 80%; ;
+    width: 80%;
 }
