--- a/vite-project/src/Component/NavBar/navBar.css
+++ b/vite-project/src/Component/NavBar/navBar.css
@@ -2,17 +2,17 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(245, 174, 44, 0.5);
+    background-color: yellow;
 }
 .nav-img{
     width: 7rem;
     margin-bottom: -4px;
 }
 .nav-cont-link a{
-    color: rgb(58, 182, 182);
-    font-size: 3rem;
+    color: black;
+    font-size: 2.5rem;
     margin-left: 2rem;
 }
 .nav-cont-search input{
-    width: 80%;
+    width: 100%;
 }
